
* LUCENE-9544: add regenerate gradle script for nori dictionary (Namgyu Kim)

* LUCENE-9627: Remove unused Lucene50FieldInfosFormat codec and small refactor some codecs
  to separate reading header/footer from reading content of the file. (Ignacio Vera)

======================= Lucene 8.9.0 =======================

New Features
---------------------

* LUCENE-9694: New tool for creating a deterministic index (Haoyu Zhai)

======================= Lucene 8.8.0 =======================

New Features
---------------------

* LUCENE-9574 A token filter to drop tokens that match all specified flags. (Gus Heck, Uwe Schindler)

* LUCENE-9572: TypeAsSynonymFilter has been enhanced support ignoring some types, and to allow
  the generated synonyms to copy some or all flags from the original token (Gus Heck).

* LUCENE-9552: New LatLonPoint query that accepts an array of LatLonGeometries. (Ignacio Vera) 

* LUCENE-9641: LatLonPoint query support for spatial relationships. (Ignacio Vera) 

* LUCENE-9553: New XYPoint query that accepts an array of XYGeometries. (Ignacio Vera)  

* LUCENE-9378: Doc values now allow configuring how to trade compression for
  retrieval speed. (Adrien Grand)

* LUCENE-9413: Add CJKWidthCharFilter and its factory (Tomoko Uchida)

Improvements
---------------------

* LUCENE-9455: ExitableTermsEnum should sample timeout and interruption
  check before calling next(). (Zach Chen via Bruno Roustant)

* LUCENE-9023: GlobalOrdinalsWithScore should not compute occurrences when the
  provided min is 1. (Jim Ferenczi)

* LUCENE-9675: Binary doc values fields now expose their configured compression mode
  in the attributes of the field info. (Jim Ferenczi)

Optimizations
---------------------

* LUCENE-9536: Reduced memory usage for OrdinalMap when a segment has all
  values. (Julie Tibshirani via Adrien Grand)
  
* LUCENE-9021: QueryParser: re-use the LookaheadSuccess exception. (Przemek Bruski via Mikhail Khludnev)
